--- a/word-learner/pyproject.toml
+++ b/word-learner/pyproject.toml
@@ -12,6 +12,8 @@ fastapi = "^0.95.1"
 uvicorn = "^0.22.0"
 requests = "^2.30.0"
 openai = "^0.27.6"
+langchain = "^0.0.167"
+pydantic = "^1.10.7"
 
 
 [build-system]
